# nazeer_cmake

1_HelloWorld/: CMakeLists.txt  Makefile  main.cpp
1_HelloWorld/app/: main.cpp
1_HelloWorld/inc/: my_lib.h
1_HelloWorld/src/: my_lib.cpp
